fix wrong height dataset cells

--- a/src/styles/DataViewer.scss
+++ b/src/styles/DataViewer.scss
@@ -44,6 +44,7 @@
 
 .data-viewer-cell {
   background-color: #fafafa;
+  white-space: normal;
 }
 
 .data-viewer__header-cell--active,
